fix body overflow

--- a/assets/scss/_styles_project.scss
+++ b/assets/scss/_styles_project.scss
@@ -66,6 +66,10 @@
   margin-top: 3rem;
 }
 
+body{
+  overflow-x: hidden;
+}
+
 // Main Middle Body
 .td-content {
   h2 {
